--- a/HitPoints.Api/appsettings.json
+++ b/HitPoints.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Database": {
+    "ConnectionString": "Server=localhost;Port=5432;Database=player_character;User ID=challenge;Password=changeme;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
