--- a/HitPoints.Api/HitPoints.Api.csproj
+++ b/HitPoints.Api/HitPoints.Api.csproj
@@ -8,12 +8,19 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\HitPoints.Application\HitPoints.Application.csproj" />
       <ProjectReference Include="..\HitPoints.Contracts\HitPoints.Contracts.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Include="SeedData\briv.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
